mdapipkg/objects/Region__c.object
<CustomObject>
    <fields>
        <fullName>Education_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Education Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Executive_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executive Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regions4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Governance_Limit_Green__c</fullName>
        <defaultValue>70</defaultValue>
        <description>Governance Limit # of GLC Officer Positions filled</description>
        <inlineHelpText># of GLC Officer Positions filled</inlineHelpText>
        <label>Governance Limit Green</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Governance_Limit_Red__c</fullName>
        <defaultValue>40</defaultValue>
        <description>Governance Limit # of GLC Officer Positions filled</description>
        <inlineHelpText># of GLC Officer Positions filled</inlineHelpText>
        <label>Governance Limit Red</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Governance_Limit_Yellow__c</fullName>
        <defaultValue>40</defaultValue>
        <description>Governance Limit # of GLC Officer Positions filled</description>
        <inlineHelpText># of GLC Officer Positions filled</inlineHelpText>
        <label>Governance Limit Yellow</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Membership_Limit_Red__c</fullName>
        <defaultValue>50</defaultValue>
        <description>Membership Limit Red Total Number of Members</description>
        <inlineHelpText>Total Number of Members</inlineHelpText>
        <label>Membership Limit Red</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Membership_Limit_Yellow__c</fullName>
        <defaultValue>50</defaultValue>
        <description>Membership Limit Total Number of Members</description>
        <inlineHelpText>Total Number of Members</inlineHelpText>
        <label>Membership Limit Yellow</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Membership_Limit__c</fullName>
        <defaultValue>65</defaultValue>
        <description>Membership Total Number of Members</description>
        <inlineHelpText>Total Number of Members</inlineHelpText>
        <label>Membership Limit Green</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RBM_Participation_Limit_Red__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Regional Board meeting Attendance</description>
        <inlineHelpText>Regional Board meeting Attendance</inlineHelpText>
        <label>RBM Participation Limit Red</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RBM_Participation_Limit_Yellow__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Regional Board meeting Attendance</description>
        <inlineHelpText>Regional Board meeting Attendance</inlineHelpText>
        <label>RBM Participation Limit Yellow</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RBM_Participation_Limit__c</fullName>
        <defaultValue>2</defaultValue>
        <description>Regional Board meeting Attendance</description>
        <inlineHelpText>Regional Board meeting Attendance</inlineHelpText>
        <label>RBM Participation Limit Green</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Regional_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regions6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regional_Family_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Family Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regional_Forum_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Forum Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regions5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regional_Manager_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Manager #2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Regions</relationshipLabel>
        <relationshipName>Regions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regional_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Manager #1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regional_Membership_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Membership Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regions3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>sMall</fullName>
                </value>
                <value>
                    <fullName>Med</fullName>
                </value>
                <value>
                    <fullName>larg</fullName>
                </value>
                <value>
                    <fullName>HUGGE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Super_Region__c</fullName>
        <label>Super Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Region_Name__c</fullName>
        <externalId>true</externalId>
        <label>Unique Region Name</label>
        <length>150</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Region</label>
    <nameField>
        <label>Region Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>